FIX: Moved image behind canvas

--- a/canvas.css
+++ b/canvas.css
@@ -1,17 +1,34 @@
-.canvas {
-  border: 5px solid seagreen;
+.draw-card-canvas {
+  z-index: 20;
+  position:absolute;
 }
+.canvas-background {
+  z-index: 1;
+  position:absolute;
+}
+
+.container {
+    display:inline-block;
+    margin: 0 auto;
+}
+
+.stacked {
+    position:relative;
+}
+
 .button-tool {
   visibility: hidden;
   background: white;
-  margin: 10 10 10 10;
+  margin: 10px 10px 10px 10px;
   border: 1px solid gray
 }
+
 .btn-file {
-  margin: 10 10 10 10;
+  margin: 10px 10px 10px 10px;
   position: relative;
   overflow: hidden;
 }
+
 .btn-file input[type=file] {
   position: absolute;
   top: 0;
@@ -20,7 +37,6 @@
   min-height: 100%;
   font-size: 100px;
   text-align: right;
-  filter: alpha(opacity=0);
   opacity: 0;
   outline: none;
   background: white;
